# Build-A-Kernel

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  compile_flags.txt
Includes/: exception_handler.hpp  idt.hpp  terminal.hpp  vga.hpp
Includes/interrupt_handler/: idt.hpp
Includes/mmgr/: mmgr.hpp  paging.hpp  pmm.hpp
arch/x86/: boot.s  linker.ld
cmake/: toolchain-i386.cmake
iso/: kernel
iso/boot/: kernel
iso/boot/grub/: grub.cfg
src/: kernel.cpp  terminal.cpp
src/boot/arch/x86/: boot.s  linker.ld
src/exception_handler/: excep_handler.cpp
src/exception_handler/idt/: idt.cpp  idt.s
src/interrupt_handler/: excep_handler.cpp  idt.cpp  idt.s
src/mmgr/: paging.cpp  pmm.cpp
